start with no keys, avoid jumps when changing keys

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -31,6 +31,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  border: 2px solid rgba(0,0,0,0);
 }
 
 .note--keyOne {
@@ -85,7 +86,6 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   align-items:flex-start;
-  justify-content: space-between;
 }
 
 .keytonic-button,
